Sync widget visibility status when importing, fix content top margins in different situations

--- a/html/themes/custom/common_design_subtheme/sass/ghi/blocks/_common.scss
+++ b/html/themes/custom/common_design_subtheme/sass/ghi/blocks/_common.scss
@@ -47,7 +47,7 @@
   // (ui-dialog sets a line-height of 1).
   line-height: 1.5;
 
-  .layout__region &:first-child {
+  #main-content.has-subpage-title .layout__region &:first-child {
     margin-top: 0;
     padding-top: 0;
   }
